<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/splashFragment">

    <fragment
        android:id="@+id/splashFragment"
        android:name="com.mobile.fingram.ui.splash.SplashFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_splash">
        <action
            android:id="@+id/action_splash_to_onboarding"
            app:destination="@id/onboardingFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popUpTo="@id/splashFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_splash_to_pin_lock"
            app:destination="@id/pinLockFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popUpTo="@id/splashFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_splash_to_home"
            app:destination="@id/transactionsFragment"
            app:popUpTo="@id/splashFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/onboardingFragment"
        android:name="com.mobile.fingram.ui.onboarding.OnboardingFragment"
        android:label="Onboarding"
        tools:layout="@layout/fragment_onboarding">
        <action
            android:id="@+id/action_onboarding_to_home"
            app:destination="@id/transactionsFragment"
            app:popUpTo="@id/onboardingFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/pinLockFragment"
        android:name="com.mobile.fingram.ui.settings.PinLockFragment"
        android:label="PIN Lock"
        tools:layout="@layout/fragment_pin_lock">
        <action
            android:id="@+id/action_pin_lock_to_home"
            app:destination="@id/transactionsFragment"
            app:popUpTo="@id/pinLockFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <!-- NEW EXPENSE MODULE -->
    <fragment
        android:id="@+id/transactionsFragment"
        android:name="com.mobile.fingram.ui.transactions.TransactionsFragment"
        android:label="@string/nav_trans"
        tools:layout="@layout/fragment_transactions">
        <action
            android:id="@+id/action_transactions_to_add"
            app:destination="@id/addTransactionBottomSheet" />
    </fragment>

    <fragment
        android:id="@+id/statsFragment"
        android:name="com.mobile.fingram.ui.stats.StatsFragment"
        android:label="@string/nav_stats"
        tools:layout="@layout/fragment_stats" />

    <fragment
        android:id="@+id/accountsFragment"
        android:name="com.mobile.fingram.ui.accounts.AccountsFragment"
        android:label="@string/nav_accounts"
        tools:layout="@layout/fragment_accounts">
        <action
            android:id="@+id/action_accounts_to_creditCardList"
            app:destination="@id/creditCardListFragment" />
        <action
            android:id="@+id/action_accounts_to_creditCardDetail"
            app:destination="@id/creditCardDetailFragment" />
    </fragment>

    <dialog
        android:id="@+id/addTransactionBottomSheet"
        android:name="com.mobile.fingram.ui.transactionform.AddTransactionBottomSheet"
        android:label="Add Transaction"
        tools:layout="@layout/layout_add_transaction">
        <action
            android:id="@+id/action_addTransactionBottomSheet_to_addEditCreditCardFragment"
            app:destination="@id/addEditCreditCardFragment" />
        <argument
            android:name="transactionId"
            app:argType="long"
            android:defaultValue="-1L" />
    </dialog>

    <!-- LEGACY/EXISTING BILLS -->
    <fragment
        android:id="@+id/billListFragment"
        android:name="com.mobile.fingram.ui.bills.BillListFragment"
        android:label="@string/nav_home"
        tools:layout="@layout/fragment_bill_list" />

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.mobile.fingram.ui.settings.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/manageAccountsFragment"
        android:name="com.mobile.fingram.ui.accounts.ManageAccountsFragment"
        android:label="Accounts"
        tools:layout="@layout/fragment_manage_accounts" />

    <!-- Credit Card Module -->
    <fragment
        android:id="@+id/creditCardListFragment"
        android:name="com.mobile.fingram.ui.creditcards.CreditCardListFragment"
        android:label="Credit Cards"
        tools:layout="@layout/fragment_credit_card_list">
        <action
            android:id="@+id/action_creditCardList_to_addEdit"
            app:destination="@id/addEditCreditCardFragment" />
        <action
            android:id="@+id/action_creditCardList_to_detail"
            app:destination="@id/creditCardDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/creditCardDetailFragment"
        android:name="com.mobile.fingram.ui.creditcards.CreditCardDetailFragment"
        android:label="Card Detail"
        tools:layout="@layout/fragment_credit_card_detail">
        <argument
            android:name="cardId"
            app:argType="long"
            android:defaultValue="-1L" />
    </fragment>

    <fragment
        android:id="@+id/addEditCreditCardFragment"
        android:name="com.mobile.fingram.ui.creditcards.AddEditCreditCardFragment"
        android:label="{title}"
        tools:layout="@layout/fragment_add_edit_credit_card">
        <argument
            android:name="cardId"
            app:argType="long"
            android:defaultValue="-1L" />
        <argument
            android:name="title"
            app:argType="string"
            android:defaultValue="Add Credit Card" />
    </fragment>

    <fragment
        android:id="@+id/addEditExpenseFragment"
        android:name="com.mobile.fingram.ui.expenseform.AddEditExpenseFragment"
        android:label="Add Expense"
        tools:layout="@layout/fragment_add_edit_expense">
        <argument
            android:name="expenseId"
            app:argType="long"
            android:defaultValue="-1L" />
    </fragment>

</navigation>
